# aqemu

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  NOTICE  PRIVACY.md  README.md  TODO  aqemu_0.9.7_arm64.deb  aqemu_0.9.8_arm64.deb  meson.build  meson_options.txt
docs/: QEMU_MACHINE_CATALOG.md  VM_WIZARD_THREE_PATH.md  intel-macos-gpu.md  qemu_machine_catalog.json
packaging/: README-WINDOWS.txt
resources/: icons.qrc  shared_images.qrc  wizard_trees.json
resources/cmake/: CopySpiceRuntime.ps1
resources/docs/: links.html
resources/os_templates/: FreeDOS.aqvmt  Haiku OS.aqvmt  Mac OS Classic PPC.aqvmt  RISC-V Linux.aqvmt  Raspberry Pi OS.aqvmt  Ubuntu Linux.aqvmt  Windows 10.aqvmt  Windows 11 ARM.aqvmt  Windows 11.aqvmt  Windows 2000.aqvmt  Windows 7.aqvmt  Windows 9X.aqvmt  Windows Vista.aqvmt  Windows XP.aqvmt
screenshots/: README.md
scripts/: build_qemu_linux.sh  build_qemu_windows.ps1  build_qemu_windows.sh  build_qemu_windows_msys.sh  build_qemu_windows_winlibs.sh  fix_msys2_gcc_admin.ps1  patch-longqt-boot.sh  probe_qemu_machines.py
src/: About_Window.cpp  About_Window.ui  Add_New_Device_Window.cpp  Add_New_Device_Window.ui  Advanced_Options.ui  Advanced_Settings_Window.cpp  Advanced_Settings_Window.h  Advanced_Settings_Window.ui  Architecture_Options.ui  Blockdev_Graph_Window.cpp  Blockdev_Graph_Window.h  Convert_HDD_Image_Window.cpp  Emulator_Control_Window.cpp  Emulator_Control_Window.h  Emulator_Control_Window.ui  Emulator_Options_Window.cpp  Error_Log_Window.cpp  Error_Log_Window.h  Error_Log_Window.ui  First_Start_Wizard.cpp  First_Start_Wizard.h  First_Start_Wizard.ui  HDD_Image_Info.cpp  Main_Window.cpp  Main_Window.h  Main_Window.ui  Migrate_Progress_Dialog.cpp  Migrate_Progress_Dialog.h  QDom.cpp  QEMU_Help_Browser.cpp  QEMU_Help_Browser.h  QMP_Client.cpp  QMP_Client.h  Run_Guard.cpp  Service.cpp  Service.h  System_Info.cpp  System_Info.h  Utils.cpp  Utils.h  (+13 more)
src/Embedded_Display/: Guest_Display_View.cpp  Guest_Display_View.h  Machine_View.cpp  Spice_View.cpp  Spice_View.h  vncclientthread.cpp  vncview.cpp
